Fix alignment: badge relative to media-col, remove project-media padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,14 +314,14 @@ h2 {
 
 .project-media {
   position: relative;
-  margin: 0 auto 0 auto;
-  display: inline-block;
-  width: 90%;
+  margin: 0;
+  display: block;
+  width: 100%;
   border-radius: 8px;
   overflow: visible;
   border: none !important;
-  padding-top: 8px;
-  padding-left: 8px;
+  padding-top: 0;
+  padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -344,10 +344,11 @@ h2 {
   border-radius: 8px;
 }
 
+.media-col .conference-badge,
 .project-media .conference-badge {
   position: absolute;
-  top: -8px;
-  left: -8px;
+  top: 0px;
+  left: 0px;
   width: auto;
   z-index: 10;
   display: inline-block;
